--- a/flex-box/flex-direction.html
+++ b/flex-box/flex-direction.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>justify-content</title>
+  <title>flex-direction</title>
   <style>
     .container {
       height: 500px;
@@ -13,12 +13,10 @@
 
       /****/
       display: flex;
-      /* justify-content: center; */
-      /* justify-content: flex-start; */
-      /* justify-content: flex-end; */
-
-      justify-content: space-between;
-      /* justify-content: flex-start;*/
+      flex-direction: row;
+      /* flex-direction: row-reverse;
+      flex-direction: column; */
+      flex-direction: column-reverse;
     }
 
     .box {
@@ -34,10 +32,11 @@
 </head>
 
 <body>
-  <h1>justify-content</h1>
-  <p>How to center anything horizontally using CSS flex-box</p>
+  <h1>flex-direction</h1>
   <div class="container">
-    <div class="box box1">1</div>
+    <div class="box">1</div>
+    <div class="box">2</div>
+    <div class="box">3</div>
   </div>
 </body>
 
