--- a/flex-box/flex-direction.html
+++ b/flex-box/flex-direction.html
@@ -11,7 +11,7 @@
       background-color: DodgerBlue;
       padding-top: 10px;
 
-      /****/
+      /**flag**/
       display: flex;
       flex-direction: row;
       /* flex-direction: row-reverse;
