--- a/flex-box/justify-content.html
+++ b/flex-box/justify-content.html
@@ -17,8 +17,9 @@
       /* justify-content: flex-start; */
       /* justify-content: flex-end; */
 
-      justify-content: space-between;
-      /* justify-content: flex-start;*/
+      /* justify-content: space-between; */
+      /* justify-content: space-evenly; */
+      justify-content: space-around;
     }
 
     .box {
@@ -38,6 +39,8 @@
   <p>How to center anything horizontally using CSS flex-box</p>
   <div class="container">
     <div class="box box1">1</div>
+    <div class="box box1">2</div>
+    <div class="box box1">3</div>
   </div>
 </body>
 
